# 2022_jsjds

./: .gitignore  README.md  slam_version.txt
src/dashgo/: ReadMe.txt
src/dashgo/dashgo_description/launch/: dashgo_description.launch
src/dashgo/dashgo_description/urdf/: frames.gv
src/dashgo/dashgo_description/urdf/dashgobase/: base.urdf.xacro
src/dashgo/dashgo_nav/2022_map/: final.pgm  starand_graph.yaml  starand_graph2.pgm  starand_graph3.pgm  test.pgm  test.yaml
src/dashgo/dashgo_nav/config/imu/: base_global_planner_param.yaml  costmap_common_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
src/dashgo/dashgo_nav/launch/: gmapping_imu.launch  gmapping_imu_new.launch  map_save.launch  navigation_camera_imu.launch  navigation_imu_2.launch  navigation_imu_2022.launch  navigation_imu_new.launch  navigation_multi_imu_2.launch  navigation_multi_loop_imu_2.launch
src/dashgo/dashgo_nav/launch/include/imu/: gmapping_base.launch  gmapping_base_adjusted.launch
src/dashgo/dashgo_nav/scripts/graph/: graph_enhance.py  requirements.txt  test_6.pgm  test_new.pgm
src/dashgo/dashgo_tools/: CMakeLists.txt
src/dashgo/dashgo_tools/conf/: box_filter.yaml
src/dashgo/dashgo_tools/scripts/: teleop_twist_keyboard.py
src/dashgo/dashgo_tools/scripts/pyc/: MultiGoals.py
src/dashgo/dashgo_tools/src/: NodeTest.cpp
src/dashgo/get_odom/: CMakeLists.txt  package.xml
src/dashgo/get_odom/src/: get_odom.cpp
src/dashgo/mapping/slam_gmapping-hydro-devel/: ReadMe.txt
src/dashgo/mapping/slam_gmapping-hydro-devel/gmapping/: Config.txt
src/dashgo/mapping/slam_gmapping-hydro-devel/gmapping/config/: gmapping.yaml
src/dashgo/mapping/slam_gmapping-hydro-devel/gmapping/launch/: gmapping_base.launch
src/dashgo/rplidar_ros/launch/: rplidar.launch
src/dashgo/rplidar_ros/src/: node.cpp
src/dashgo/rviz/loop_move/: CMakeLists.txt  package.xml  plugin_description.xml  设计说明
src/dashgo/rviz/loop_move/msg/: LoopMoveMsg.msg
src/dashgo/rviz/loop_move/src/: excute_navigation.cpp  loop_move.cpp  loop_move.h
src/dashgo/rviz/move_to_grab/: CMakeLists.txt  package.xml  plugin_description.xml  备份-CMakeLists (复件).txt
src/dashgo/rviz/move_to_grab/src/: drive_widget.cpp  drive_widget.h  move_to_grab.cpp  move_to_grab.h  备份-move_to_grab.cpp
src/dashgo/rviz/rviz-kinetic-devel/: plugin_description.xml
src/dashgo/rviz/rviz-kinetic-devel/src/rviz/: tool.cpp  tool.h  (+1 more)
src/dashgo/single_scan/: CMakeLists.txt  package.xml
src/dashgo/single_scan/launch/: publish_single_scan.launch
src/dashgo/single_scan/src/: publish_single_scan.cpp
src/dashgo/smart_node/config/: smart_config.yaml  smart_parms_imu.yaml  yocs_velocity_smoother.yaml
src/dashgo/smart_node/include/smart_node/: smart_node.h
src/dashgo/smart_node/launch/: driver_imu.launch  driver_imu_new.launch
src/dashgo/smart_node/sdk/include/: ChannelDevice.h  serial.h  smart_driver.h
src/dashgo/smart_node/sdk/src/: serial.cpp  smart_driver.cpp
src/dashgo/smart_node/src/nodes/: smart_node.cpp
src/dashgo/traffic/src/: turtbot_follower.cpp
src/dashgo/ydlidar_ros-master/launch/: display.launch  lidar.launch  ydlidar1_up.launch
src/dashgo_src/: ReadMe.txt
src/dashgo_src/costmap_2d/include/costmap_2d/: beifen-virtualWall_layer.h  costmap_2d.h  costmap_2d_ros.h  inflation_layer.h  virtualWall_layer.h
src/dashgo_src/costmap_2d/plugins/: beifen-virtualWall_layer.cpp  inflation_layer.cpp  obstacle_layer.cpp  static_layer.cpp  virtualWall_layer.cpp
src/dashgo_src/costmap_2d/src/: costmap_2d.cpp  costmap_2d_ros.cpp  costmap_layer.cpp  costmap_math.cpp  footprint.cpp  layered_costmap.cpp
src/dashgo_src/move_base/: eai-version.txt  package.xml
src/dashgo_src/teb_local_planner/src/: teb_local_planner_ros.cpp
(+18 files in other folders)
